Java: GptUi: parallel request support